<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:contentInsetLeft="0dp"
    android:contentInsetStart="0dp"
    app:contentInsetLeft="0dp"
    app:contentInsetStart="0dp"
    android:contentInsetRight="0dp"
    android:contentInsetEnd="0dp"
    app:contentInsetRight="0dp"
    app:contentInsetEnd="0dp"
    >

    <LinearLayout
        android:id="@+id/menuly"
        android:layout_width="270dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:orientation="vertical"
        android:background="#fff"
        android:clickable="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="#fff"
            >

            <ImageView
                android:id="@+id/closebt"
                android:layout_width="32dp"
                android:layout_height="34dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:src="@drawable/closebt" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#fff"
            android:id="@+id/logly"

            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/log_ly"
                >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/imgsrc"
                    android:background="@drawable/img_round"
                    android:layout_marginLeft="30dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/struserid"
                    android:text="222"
                    android:layout_toRightOf="@+id/imgsrc"
                    android:textSize="14sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:id="@+id/pnt_bt"
                >
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/img_mn22"
                    android:layout_marginTop="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/p_str"
                    android:text="0"
                    android:layout_toRightOf="@+id/pnt_img"
                    android:textSize="12sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>



        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b7b7b7"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <RelativeLayout
            android:layout_width="268dp"
            android:layout_height="30dp"
            android:background="#fff"
            android:id="@+id/ctebt"
            >

            <TextView
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@string/feed"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b7b7b7"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:visibility="gone"
            />

        <RelativeLayout
            android:layout_width="268dp"
            android:layout_height="30dp"
            android:background="#fff"
            android:id="@+id/map_bt"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@string/DESTINATION"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:visibility="gone"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b7b7b7"
            android:visibility="gone"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />


        <RelativeLayout
            android:layout_width="268dp"
            android:layout_height="30dp"
            android:background="#fff"
            android:id="@+id/map_bt2"
            >

            <TextView
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@string/TRAVELVR"

                android:textColor="@color/black"
                android:textSize="20sp" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b7b7b7"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />


        <RelativeLayout
            android:layout_width="268dp"
            android:layout_height="30dp"
            android:background="#fff"
            android:id="@+id/cte20_bt"
            >

            <TextView
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="HANG OUT"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b7b7b7"
            />



        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />





        <RelativeLayout
            android:layout_width="268dp"
            android:layout_height="30dp"
            android:background="#fff"
            android:id="@+id/logbt"
            >

            <TextView
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:focusable="false"

                android:focusableInTouchMode="false"
                android:text="LOG IN"

                android:textColor="@color/black"
                android:textSize="20sp" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="268dp"
            android:layout_height="30dp"
            android:background="#fff"
            android:id="@+id/drawmn_bt3"

            >

            <TextView
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:focusable="false"

                android:focusableInTouchMode="false"
                android:text="SETTING"

                android:textColor="@color/black"
                android:textSize="20sp" />


        </RelativeLayout>




        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b7b7b7"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />



        <RelativeLayout
            android:layout_width="268dp"
            android:layout_height="30dp"
            android:background="#fff"
            android:id="@+id/regbt"
            >

            <TextView
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:focusable="false"

                android:focusableInTouchMode="false"
                android:text="JOIN NOW"

                android:textColor="@color/black"
                android:textSize="20sp" />


        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>